# jetson-ffmpeg

./: CMakeLists.txt  nvmpi.h  nvmpi_dec.cpp  nvmpi_enc.cpp
ffmpeg_dev/: .gitignore  update_patch.sh
ffmpeg_dev/4.2/: configure
ffmpeg_dev/4.4/: configure
ffmpeg_dev/6.0/: configure
ffmpeg_dev/common/libavcodec/: nvmpi_dec.c  nvmpi_enc.c
ffmpeg_patches/: ffmpeg4.2_nvmpi.patch  ffmpeg6.0_nvmpi.patch  ffmpeg6.1_nvmpi.patch
src/: nvmpi_dec.cpp
